# bo-forge

./: .gitignore  CHANGELOG.md  MANIFEST.in  README.md  REPOSITORY_STRUCTURE.md  ROADMAP.md  ROADMAP_AFTER_V1.md  ROADMAP_PRE_V1.md  ROADMAP_V0_TO_V1.md  ROADMAP_V1_X.md  ROADMAP_V2_X.md  pyproject.toml  requirements-lock.txt
.streamlit/: config.toml
bo_forge/: __init__.py  __main__.py  acquisition.py  cli.py  config.py  constraints.py  contextual.py  costs.py  diagnostics.py  errors.py  io.py  logs.py  models.py  multi_objective.py  multifidelity.py  noisy.py  plot_style.py  replicates.py  session.py  structured.py  suggestions.py  transforms.py  validation.py
bo_forge_app/: __init__.py  __main__.py  api.py  api_cli.py  cli.py  service.py  streamlit_app.py  streamlit_helpers.py  streamlit_style.py
configs/: 01_simple_2d_maximise_logei.yaml  03_simple_3d_maximise_logei.yaml  05_simple_mixed_logei.yaml  06_mixed_constrained_logei.yaml  07_cost_aware_human_review_logei.yaml  08_replicate_aware_logei.yaml  10_multi_objective_mixed_constrained_qlogehvi.yaml  11_four_objective_mixed_constrained_qlogehvi.yaml  12_cost_aware_multi_objective_qlogehvi 2.yaml  12_cost_aware_multi_objective_qlogehvi.yaml  13_structured_campaign_core.yaml  14_structured_campaign_tutorial.yaml  15_multi_fidelity_qmfkg.yaml  16_contextual_logei.yaml  17_model_profile_logei.yaml  18_noisy_pending_qlognei.yaml  19_multi_objective_qlognehvi.yaml  20_contextual_cost_review_logei.yaml  simple_2d_minimise_qlogei.yaml  simple_4d_maximise_logei.yaml
docs/: 09_APP_CREATED_CAMPAIGN_TUTORIAL.md  API_PROBE.md  CAPABILITY_MATRIX.md  CLI.md  CLI_ERROR_EXAMPLES.md  COMMON_ERRORS.md  CSV_SCHEMA.md  INSTALLATION.md  PUBLIC_API.md  QLOGNEHVI_FEASIBILITY.md  QUICKSTART.md  RELEASE_CHECKLIST.md  REPOSITORY_STRUCTURE.md  STREAMLIT_APP.md  STREAMLIT_DEPLOYMENT.md
examples/: 01_simple_2d_maximise_logei_campaign_log.csv  03_simple_3d_maximise_logei_campaign_log.csv  06_mixed_constrained_logei_campaign_log.csv  07_cost_aware_human_review_campaign_log.csv  08_replicate_aware_campaign_log.csv  10_multi_objective_mixed_constrained_campaign_log.csv  11_four_objective_mixed_constrained_campaign_log.csv  12_cost_aware_multi_objective_campaign_log 2.csv  12_cost_aware_multi_objective_campaign_log.csv  13_structured_campaign_core_campaign_log.csv  14_structured_campaign_tutorial_campaign_log.csv  15_multi_fidelity_qmfkg_campaign_log.csv  16_contextual_logei_campaign_log.csv  17_model_profile_campaign_log.csv  18_noisy_pending_qlognei_campaign_log.csv  19_multi_objective_qlognehvi_campaign_log.csv  20_contextual_cost_review_campaign_log.csv  quickstart.py  quickstart_working_log.csv  simple_2d_maximise_logei_latest_suggestions.csv  simple_2d_maximise_logei_working_log.csv  simple_2d_minimise_qlogei_campaign_report.txt  simple_2d_minimise_qlogei_latest_suggestions.csv  simple_2d_minimise_qlogei_working_log.csv  simple_2d_minimize_campaign_log.csv  simple_3d_maximise_logei_latest_suggestions.csv  simple_3d_maximise_logei_working_log.csv  simple_4d_maximise_logei_campaign_log.csv  simple_mixed_logei_campaign_log.csv
notebooks/: 01_maximisation_logei_campaign.ipynb  01_simulated_campaign.ipynb  02_minimisation_qlogei_campaign.ipynb  02_minimization_campaign.ipynb  03_three_variable_campaign.ipynb  04_cli_four_variable_campaign.ipynb  05_mixed_variable_campaign.ipynb  (+13 more)
(+24 files in other folders)
