[build-system]
requires = ["setuptools>=77", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "bo-forge"
version = "2.2.2"
description = "Practical Bayesian optimisation campaign tooling."
readme = "README.md"
requires-python = ">=3.11"
authors = [
    { name = "Angze Li" },
]
license = "Apache-2.0"
license-files = ["LICENSE"]
keywords = [
    "bayesian-optimization",
    "botorch",
    "campaign",
    "experimental-design",
    "streamlit",
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "botorch>=0.17",
    "gpytorch>=1.14",
    "matplotlib>=3.8",
    "numpy>=1.26",
    "pandas>=2.2",
    "pyyaml>=6.0",
    "torch>=2.2",
]

[project.scripts]
bo-forge = "bo_forge.cli:main"
bo-forge-app = "bo_forge_app.cli:main"
bo-forge-api = "bo_forge_app.api_cli:main"

[project.urls]
Repository = "https://github.com/angzeli/bo-forge"
Issues = "https://github.com/angzeli/bo-forge/issues"
Documentation = "https://github.com/angzeli/bo-forge/tree/main/docs"
Roadmap = "https://github.com/angzeli/bo-forge/blob/main/ROADMAP_V2_X.md"

[project.optional-dependencies]
app = [
    "streamlit>=1.57",
]
api = [
    "fastapi>=0.115",
    "uvicorn>=0.30",
]
dev = [
    "build>=1.2",
    "fastapi>=0.115",
    "httpx>=0.28",
    "ipykernel>=6.29",
    "ipywidgets>=8.1",
    "nbclient>=0.10",
    "nbformat>=5.10",
    "notebook>=7.0",
    "pytest>=8.0",
    "ruff>=0.8",
    "streamlit>=1.57",
    "twine>=5.0",
    "uvicorn>=0.30",
    "wheel>=0.45",
]

[tool.setuptools.packages.find]
include = ["bo_forge", "bo_forge.*", "bo_forge_app", "bo_forge_app.*"]

[tool.setuptools]
include-package-data = false

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
filterwarnings = [
    "ignore::botorch.exceptions.warnings.InputDataWarning",
]

[tool.ruff]
line-length = 100
target-version = "py311"
include = ["bo_forge/**/*.py", "bo_forge_app/**/*.py", "examples/**/*.py", "tests/**/*.py"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
